--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -43,7 +43,15 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="32dp"
-        android:text="Search"
+        android:background="@color/colorAccent"
+        android:elevation="10dp"
+        android:shadowColor="@color/colorPrimaryText"
+        android:shadowDx="5"
+        android:shadowDy="5"
+        android:shadowRadius="1"
+        android:textColor="@color/colorTextIcons"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/searchInputField"
         app:layout_constraintRight_toRightOf="@+id/searchInputField"
         app:layout_constraintTop_toBottomOf="@+id/searchInputField" />
