--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -44,12 +44,10 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="32dp"
         android:background="@color/colorAccent"
-        android:elevation="10dp"
-        android:shadowColor="@color/colorPrimaryText"
-        android:shadowDx="5"
-        android:shadowDy="5"
-        android:shadowRadius="1"
+        android:elevation="0dp"
+        android:text="Search"
         android:textColor="@color/colorTextIcons"
+        android:textColorLink="@color/colorTextIcons"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/searchInputField"
